# RayTracing

./: CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.h  Color.h  Image.cpp  Image.h  ImageIO.cpp  ImageIO.h  Lab4  Light.h  Main.cpp  Makefile  Material.h  Plane.cpp  Plane.h  README.md  Ray.h  Raytrace.cpp  Raytrace.h  Scene.h  Sphere.cpp  Sphere.h  Surface.h  Triangle.cpp  Triangle.h  Util.cpp  Util.h  Vector3d.h  cmake_install.cmake
CS3241Lab4/CS3241Lab4.xcodeproj/: project.pbxproj
CS3241Lab4/CS3241Lab4.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CS3241Lab4/CS3241Lab4.xcodeproj/project.xcworkspace/xcuserdata/harrismaung.xcuserdatad/: UserInterfaceState.xcuserstate
CS3241Lab4/CS3241Lab4.xcodeproj/xcuserdata/harrismaung.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CS3241Lab4/CS3241Lab4.xcodeproj/xcuserdata/harrismaung.xcuserdatad/xcschemes/: xcschememanagement.plist
